added new version of Elasticsearch 5.3.0. Updated installation script.